--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>JM</title>
   </head>
   <body>
-    <div id="root" class=""></div>
+    <div id="root" class="scroll-smooth"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
