--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/logo.jpeg" />
+   <link rel="icon" href="/favicon.png" type="image/png">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JM</title>
+    <title>Jmodasport</title>
+  <!-- Favicon -->
+<link rel="icon" href="/favicon.png" type="image/png">
+
+<!-- Meta SEO -->
+<meta name="description" content="Ropa urbana moderna, deportiva y casual para todas las edades. Zapatos, camisetas, pupos y pupillos de alta calidad. ¡Visítanos y descubre tu estilo!">
+
+<!-- Open Graph (SEO para buscadores y redes sociales) -->
+<meta property="og:title" content="JModa Sport - Moda urbana para todos">
+<meta property="og:description" content="Ropa urbana moderna, deportiva y casual para todas las edades. Zapatos, camisetas, pupos y pupillos de alta calidad. ¡Visítanos y descubre tu estilo!">
+<meta property="og:image" content="https://jmodasport.com/logo.png">
+<meta property="og:url" content="https://jmodasport.com">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="JModa Sport - Moda urbana para todos">
+<meta name="twitter:description" content="Explora ropa urbana, deportiva y más. Compra ahora en JModa Sport.">
+<meta name="twitter:image" content="https://jmodasport.com/logo.png">
+
   </head>
   <body>
     <div id="root" class="scroll-smooth"></div>
