--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
    <link rel="icon" href="/favicon.png" type="image/png">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jmodasport</title>
+ <title>JModa Sport - Ropa urbana y calzado con estilo</title>
   <!-- Favicon -->
 <link rel="icon" href="/favicon.png" type="image/png">
 
-<!-- Meta SEO -->
-<meta name="description" content="Ropa urbana moderna, deportiva y casual para todas las edades. Zapatos, camisetas, pupos y pupillos de alta calidad. ¡Visítanos y descubre tu estilo!">
 
 <!-- Open Graph (SEO para buscadores y redes sociales) -->
 <meta property="og:title" content="JModa Sport - Moda urbana para todos">
@@ -24,7 +22,7 @@
 <meta name="twitter:title" content="JModa Sport - Moda urbana para todos">
 <meta name="twitter:description" content="Explora ropa urbana, deportiva y más. Compra ahora en JModa Sport.">
 <meta name="twitter:image" content="https://jmodasport.com/logo.png">
-
+<meta name="description" content="Descubre camisetas, calzado y moda urbana moderna en JModa Sport. Envío rápido, precios justos y estilo garantizado.">
   </head>
   <body>
     <div id="root" class="scroll-smooth"></div>
